[B]Retrospect v5.4.10 - Changelog - 2021-12-19[/B]

t.b.d.

[B]Framework related[/B]
* Added: 'Shortcut' implementation to enable automation of Retrospect via Kodi (JSON) API (Fixes #1591 and #1588).

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: ViaSat now has encrypted streams, so we always need to use InputStream Adaptive (Fixes #1589).
* Updated: Mark genre folders with content type `videos` (See #1579).
* Updated: Mark Single item sin SVT as `videos` (See #1579).