@@ -15,20 +15,6 @@
       "fanart": "rtvdrenthefanart.jpg"
     },
     {
-      "guid": "7C40EEE7-40F4-40ED-8A70-FAAB42B7A2B1",
-      "name": "RTV Noord",
-      "description": {
-        "en": "Video on demand for RTV Noord.\n\nNews, weather sports and opinions at RTV Noord, the regional broadcaster for Groningen.",
-        "nl": "RTV Noord Uitzendinggemist.\n\nNieuws, weer, sport en opinie op RTV Noord, de regionale omroep voor Groningen."
-      },
-      "icon": "rtvnoordlarge.png",
-      "category": "Regional",
-      "channelcode": "rtvnoord",
-      "sortorder": 100,
-      "language": "nl",
-      "fanart": "rtvnoordfanart.png"
-    },
-    {
       "guid": "EFE57022-9F52-41F9-8775-13CCD001FA56",
       "name": "Omroep West",
       "description": {
