@@ -21,12 +21,6 @@ class TestLokaalChannel(ChannelTest):
         items = self._test_folder_url(live_url, 1)
         self.assertGreaterEqual(len([i for i in items if i.is_video]), 1)
 
-    def test_rtvnoord_mainlist(self):
-        self._switch_channel("rtvnoord")
-
-        items = self.channel.process_folder_list(None)
-        self.assertGreater(len(items), 10)
-
     def test_omroepwest_mainlist(self):
         self._switch_channel("omroepwest")
 
