@@ -12,3 +12,4 @@ _None_
 * Fixed: ViaSat now has encrypted streams, so we always need to use InputStream Adaptive (Fixes #1589).
 * Updated: Mark genre folders with content type `videos` (See #1579).
 * Updated: Mark Single item sin SVT as `videos` (See #1579).
+* Changed: RTV Noord to Regio Groei.
